оконо пользователя готово

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <!--              Аккаунт пользователя-->
           <div class="account-popover">
             <h2 class="popover-title">
-              Здравствуйте,
+              Здравствуйте,<br>
               Равшан Джамшутович
             </h2>
 
@@ -94,7 +94,7 @@
 
             <a class="account-link" href="#">мои заказы</a>
             <a class="account-link" href="#">личный кабинет</a>
-            <button class="account-exit-button">Выйти</button>
+            <button class="account-exit-button general-button">Выйти</button>
           </div>
         </div>
 
