--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </form>
 
           <!--              Аккаунт пользователя-->
-          <div class="account-popover">
+          <div class="account-popover popover-is-closed">
             <h2 class="popover-title">
               Здравствуйте,<br>
               Равшан Джамшутович
