--- a/index.html
+++ b/index.html
@@ -216,9 +216,14 @@
           <ol class="slider">
 
 <!--            Страница слайдера-->
-            <li class="inner-slider-item">
+            <li class="inner-slider-item slide-1">
               <h3 class="inner-card-title">Дрели</h3>
               <p class="slider-description">Соседям на радость!</p>
+            </li>
+
+            <li class="inner-slider-item slide-2">
+              <h3 class="inner-card-title">Перфораторы</h3>
+              <p class="slider-description">Настроящие мужские игрушки</p>
             </li>
 
           </ol>
