--- a/index.html
+++ b/index.html
@@ -371,54 +371,74 @@
       <div class="search-result">
         <ul class="result-list">
           <li class="result-item new-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price middle-line">22500 ₽</p>
-            <button class="buy-button">15500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+              <p class="old-price middle-line">22500 ₽</p>
+              <button class="buy-button">15500 ₽</button>
+            </a>
           </li>
           <li class="result-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 ₽</p>
-            <button class="buy-button">25500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="old-price">30500 ₽</p>
+              <button class="buy-button">25500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
+            </a>
           </li>
           <li class="result-item new-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-            <button class="buy-button">25500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+              <button class="buy-button">25500 ₽</button>
+            </a>
           </li>
           <li class="result-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price middle-line">22500 ₽</p>
-            <button class="buy-button">15500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+              <p class="old-price middle-line">22500 ₽</p>
+              <button class="buy-button">15500 ₽</button>
+            </a>
           </li>
           <li class="result-item new-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-            <button class="buy-button">25500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+              <button class="buy-button">25500 ₽</button>
+            </a>
           </li>
           <li class="result-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
-            <button class="buy-button">25500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+              <button class="buy-button">25500 ₽</button>
+            </a>
           </li>
           <li class="result-item new-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price middle-line">22500 ₽</p>
-            <button class="buy-button">15500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+              <p class="old-price middle-line">22500 ₽</p>
+              <button class="buy-button">15500 ₽</button>
+            </a>
           </li>
           <li class="result-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 ₽</p>
-            <button class="buy-button">25500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="old-price">30500 ₽</p>
+              <button class="buy-button">25500 ₽</button>
+            </a>
           </li>
           <li class="result-item new-item">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
-            <button class="buy-button">25500 ₽</button>
+            <a class="result-link" href="#">
+              <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+              <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+              <button class="buy-button">25500 ₽</button>
+            </a>
           </li>
         </ul>
 
