--- a/index.html
+++ b/index.html
@@ -376,6 +376,8 @@
               <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price middle-line">22500 ₽</p>
               <button class="buy-button">15500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item">
@@ -393,6 +395,8 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
               <button class="buy-button">25500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item">
@@ -401,6 +405,8 @@
               <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price middle-line">22500 ₽</p>
               <button class="buy-button">15500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item new-item">
@@ -408,6 +414,8 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
               <button class="buy-button">25500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item">
@@ -415,6 +423,8 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
               <button class="buy-button">25500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item new-item">
@@ -423,6 +433,8 @@
               <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price middle-line">22500 ₽</p>
               <button class="buy-button">15500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item">
@@ -431,6 +443,8 @@
               <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
               <p class="old-price">30500 ₽</p>
               <button class="buy-button">25500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
           <li class="result-item new-item">
@@ -438,6 +452,8 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
               <button class="buy-button">25500 ₽</button>
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
           </li>
         </ul>
