--- a/index.html
+++ b/index.html
@@ -375,7 +375,10 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price middle-line">22500 ₽</p>
-              <button class="buy-button">15500 ₽</button>
+              <button class="buy-button">
+                15500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -385,7 +388,10 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
               <p class="old-price">30500 ₽</p>
-              <button class="buy-button">25500 ₽</button>
+              <button class="buy-button">
+                25500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -394,7 +400,10 @@
             <a class="result-link" href="#">
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
-              <button class="buy-button">25500 ₽</button>
+              <button class="buy-button">
+                25500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -404,7 +413,10 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price middle-line">22500 ₽</p>
-              <button class="buy-button">15500 ₽</button>
+              <button class="buy-button">
+                15500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -413,7 +425,10 @@
             <a class="result-link" href="#">
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-              <button class="buy-button">25500 ₽</button>
+              <button class="buy-button">
+                25500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -422,7 +437,10 @@
             <a class="result-link" href="#">
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
-              <button class="buy-button">25500 ₽</button>
+              <button class="buy-button">
+                25500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -432,7 +450,10 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
               <p class="old-price middle-line">22500 ₽</p>
-              <button class="buy-button">15500 ₽</button>
+              <button class="buy-button">
+                15500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -442,7 +463,10 @@
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
               <p class="old-price">30500 ₽</p>
-              <button class="buy-button">25500 ₽</button>
+              <button class="buy-button">
+                25500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
@@ -451,7 +475,10 @@
             <a class="result-link" href="#">
               <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
               <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
-              <button class="buy-button">25500 ₽</button>
+              <button class="buy-button">
+                25500 ₽
+                <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/></svg>
+              </button>
               <button class="green-buy-button general-button" type="button">Купить</button>
               <button class="to-favorites general-button" type="button">В закладки</button>
             </a>
