--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
       </div>
 
       <div class="login-container">
-        <button class="general-button login-button" type="button">Войти</button>
-
+        <button class="general-button login-button" type="button">Войти в личный кабинет</button>
+        <button class="account-button">Равшан Джамшутович</button>
+        <button class="sign-out-button">
+          <span class="visually-hidden">Выйти из личного кабинета.</span>
+        </button>
         <!--          Окно личного кабинета-->
 
         <!--          Вход в акканут-->
