--- a/index.html
+++ b/index.html
@@ -738,8 +738,7 @@
     <div class="copyright-content page-centerer">
       <p class="copyright footer-text">&copy;&nbsp;2010&ndash;2019 Компания &laquo;Техномарт&raquo; Все права
         защищены</p>
-      <p class="copyright footer-text">Разработано&nbsp;&mdash; <a class="footer-link"
-                                                                   href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      <p class="copyright footer-text">Разработано&nbsp;&mdash; <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </p>
     </div>
   </div>
