--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
       <div class="login-container">
         <button class="general-button login-button" type="button">Войти</button>
-        <button class="account-button hide-button">Равшан Джамшутович</button>
-        <button class="sign-out-button hide-button">
+        <a class="account-button hide-button" href="#">Равшан Джамшутович</a>
+        <a class="sign-out-button hide-button" href="#">
           <span class="visually-hidden">Выйти из личного кабинета.</span>
-        </button>
+        </a>
         <!--          Окно личного кабинета-->
 
         <!--          Вход в акканут-->
