исправил недочеты с кнопками

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h2 class="popover-title">Личный кабинет</h2>
 
           <!--            Кнопка закрытия поповера-->
-          <button class="close-popover-button">
+          <button class="close-popover-button" type="button">
             <span class="visually-hidden">Закрыть.</span>
             <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -97,7 +97,7 @@
           </h2>
 
           <!--            Кнопка закрытия поповера-->
-          <button class="close-popover-button">
+          <button class="close-popover-button" type="button">
             <span class="visually-hidden">Закрыть.</span>
             <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -108,7 +108,7 @@
 
           <a class="account-link" href="#">мои заказы</a>
           <a class="account-link" href="#">личный кабинет</a>
-          <button class="account-exit-button general-button">Выйти</button>
+          <button class="account-exit-button general-button" type="button">Выйти</button>
         </div>
       </div>
 
@@ -405,7 +405,7 @@
             <p class="old-price middle-line">22500 ₽</p>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               15500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -422,7 +422,7 @@
             <p class="old-price">30500 ₽</p>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -438,7 +438,7 @@
             <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -455,7 +455,7 @@
             <p class="old-price middle-line">22500 ₽</p>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               15500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -471,7 +471,7 @@
             <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -487,7 +487,7 @@
             <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -504,7 +504,7 @@
             <p class="old-price middle-line">22500 ₽</p>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               15500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -521,7 +521,7 @@
             <p class="old-price">30500 ₽</p>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -537,7 +537,7 @@
             <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button">
+            <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
