исправил некоторые теги

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!--    Строка поиска в хедере-->
       <div class="search-container">
         <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input class="search-field" placeholder="Поиск:" type="text" name="search-field" id="search-field" required>
+          <input class="search-field" placeholder="Поиск:" type="search" name="search-field" id="search-field" required>
           <label class="search-form-label" for="search-field">
             <span class="visually-hidden">Поиск.</span>
             <svg width="20" height="21" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M8 16.3855c-4.41828 0-8-3.5817-8-8 0-4.41828 3.58172-8 8-8 4.4183 0 8 3.58172 8 8 0 1.8487-.6271 3.551-1.6801 4.9056l5.3872 5.3873-1.4142 1.4142-5.3873-5.3872C11.551 15.7584 9.84871 16.3855 8 16.3855Zm6-8c0 3.3137-2.6863 6-6 6-3.31371 0-6-2.6863-6-6 0-3.31371 2.68629-6 6-6 3.3137 0 6 2.68629 6 6Z"/></svg>
@@ -168,7 +168,7 @@
         </li>
       </ul>
 
-      <button class="general-button navigation-user-button" type="submit">Оформить заказ</button>
+      <a class="general-button navigation-user-button" href="#">Оформить заказ</a>
     </nav>
   </div>
 
@@ -383,7 +383,7 @@
       </fieldset>
 
       <!-- Кнопка фильтра -->
-      <button class="blue-border-button filter-button" type="button">Показать</button>
+      <button class="blue-border-button filter-button" type="submit">Показать</button>
 
     </form>
 
