--- a/index.html
+++ b/index.html
@@ -397,7 +397,6 @@
     <!--      Результат поиска-->
     <div class="search-result">
       <ul class="result-list">
-
         <li class="result-item new-item">
           <a class="result-link" href="#"></a>
           <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
@@ -415,138 +414,137 @@
             </svg>
           </button>
         </li>
-
         <li class="result-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 ₽</p>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+          <p class="old-price">30500 ₽</p>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item new-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price middle-line">22500 ₽</p>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+          <p class="old-price middle-line">22500 ₽</p>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               15500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item new-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item new-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="old-price middle-line">22500 ₽</p>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+          <p class="old-price middle-line">22500 ₽</p>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               15500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="old-price">30500 ₽</p>
-            <button class="green-buy-button general-button" type="button">Купить</button>
-            <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+          <p class="old-price">30500 ₽</p>
+          <div class="item-hidden-buttons">
+              <button class="green-buy-button general-button" type="button">Купить</button>
+              <button class="to-favorites general-button" type="button">В закладки</button>
+            </div>
+          <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
         <li class="result-item new-item">
-          <a class="result-link" href="#">
-            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216"
-                 height="180" alt="Перфоратор BOSCH BFG 6000.">
-            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+          <a class="result-link" href="#"></a>
+          <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+          <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+          <div class="item-hidden-buttons">
             <button class="green-buy-button general-button" type="button">Купить</button>
             <button class="to-favorites general-button" type="button">В закладки</button>
-            <button class="buy-button" type="button">
+          </div>
+          <button class="buy-button" type="button">
               25500 ₽
               <svg class="buy-button-background" width="138" height="40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M121.1 1.24A4 4 0 0 0 118.2 0H2.96C1.33 0 0 1.42 0 3.16v33.68C0 38.58 1.33 40 2.96 40H118.2a4 4 0 0 0 2.9-1.24l15.27-16a4 4 0 0 0 0-5.52l-15.28-16Z"/>
               </svg>
             </button>
-          </a>
         </li>
       </ul>
 
