добавил js subscribe

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
       <p class="subscribe-description footer-text">Получайте лучшие предложения</p>
       <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="subscribe-email">Email.</label>
-        <input class="field" placeholder="email@example.com" type="email" name="subscribe-email" id="subscribe-email"
+        <input class="field subscribe__field" placeholder="email@example.com" type="email" name="subscribe-email" id="subscribe-email"
                required>
         <button class="subscribe-button" type="submit">
           <span class="visually-hidden">Подписаться.</span>
@@ -744,5 +744,6 @@
   </div>
 
 </footer>
-
 </body>
+<script src="js/subscription.js"></script>
+</html>
